style.css
@font-face {
	font-family: 'Random Regular';
	src: url('Random-Regular.woff2') format('woff2');
}

html {
	font-family: Random Regular;
	font-size: 28px;
	font-weight: 400;
	line-height: 1.2;
	letter-spacing: 0.03em;
}

body {
	margin: 0;
	padding: 0;
	display: flex;
	flex-direction: column;
}

.image {
	background-size: 0px 0px;
	order: 2;
	position: relative;
	height: 100vw;
}

img {
	width: 100%;
	height: 100%;
	position: absolute;
	top: 0;
	left: 0;
	object-fit: cover;
	opacity: 0;
	mix-blend-mode: hue;
	filter: brightness(.2) contrast(3) blur(5px);
	transition: all 3s linear;
}

img.is-active {
	opacity: 1;
	filter: brightness(1) contrast(1) blur(0px);
}

.details {
	background-color: black;
	color: white;
	padding: 1em 1em 2em;
	order: 1;
}

form {
	background-color: rgba(233, 100, 21, 1);
	color: black;
	display: flex;
	flex-direction: column;
	padding: 1.5em 1em 0;
	order: 3;
}

input,
button {
	color: inherit;
	font-size: inherit;
	font: inherit;
	line-height: inherit;
	outline: none;
	font-weight: inherit;
	appearance: none;
	border: none;
	margin: 0;
}

button {
	background: rgba(255, 241, 227, 1);
	order: 4;
	min-height: 6rem;
	color: black;
}

button.is-disabled {
	pointer-events: none;
	color: rgba(0, 0, 0, 0.4);
}

button.has-error {
	background-color: red;
	color: white;
	font-size: 66%;
}

label {
	display: flex;
	flex-direction: row;
	width: 100%;
	margin-bottom: 0.5em;
}

input {
	background-color: transparent;
	border-color: transparent;
	border-bottom: 1px solid black;
	color: black;
	margin-bottom: 1.5em;
	padding: 0 0 0.25em;
	border-radius: 0px;
}

input::placeholder {
	color: black;
	opacity: 1;
}

@media (min-width: 760px) {
	html {
		font-size: 2vw;
		line-height: 1.25;
	}

	body {
		display: grid;
		grid-template-columns: 33vw 66vw;
		grid-template-rows: 2fr 1fr 1fr;
		height: 100vh;
		overflow: hidden;
	}

	.image {
		grid-column: 1 / 2;
		grid-row: 1 / 4;
		height: initial;
	}

	.details {
		padding-left: 1.5em;
	}

	form {
		display: grid;
		grid-template-columns: min-content auto;
		column-gap: 1.5em;
		row-gap: 1.3em;
		padding: 1.5em 1em;
	}

	input {
		margin-bottom: 0.5em;
	}
}

@media (min-width: 940px) {
	body {
		grid-template-columns: 50vw 50vw;
	}
}


@media not all and (min-resolution:.001dpcm) {
	@media {
		.image {
			background-size: cover;
		}

		img {
			mix-blend-mode: normal;
		}
	}
}

